--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/components.css" />
+    <link rel="stylesheet" href="styles/modals.css" />
+    <link rel="stylesheet" href="styles/search.css" />
   </head>
   <body>
     <div id="app">
